--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Blog</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,6 +18,13 @@
             color: white;
             padding: 10px 0;
             text-align: center;
+        }
+        header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            display: block;
+            margin: 0 auto 10px;
         }
         header h1 {
             margin: 0;
@@ -60,6 +68,12 @@
 <body>
 
 <header>
+    <img src="photo.png" alt="My Photo">
+    <div class="social-icons">
+        <a href="https://www.linkedin.com/in/petar-georgiev-752a55284/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://twitter.com/UserPetar" target="_blank"><i class="fab fa-x-twitter"></i></a>
+        <a href="mailto:petar@georgiev.cloud"><i class="fas fa-envelope"></i></a>
+    </div>
     <h1>Welcome to My Blog</h1>
 </header>
 
