--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #333;
         }
         header {
-            background-color: #333;
+            background-color: #D3D3D3;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -57,7 +57,7 @@
             margin-top: 0;
         }
         footer {
-            background-color: #333;
+            background-color: #D3D3D3;
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -68,10 +68,10 @@
 <body>
 
 <header>
-    <img src="photo.png" alt="My Photo">
+    <img src="5950-1490.png" alt="My Photo">
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/petar-georgiev-752a55284/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://twitter.com/UserPetar" target="_blank"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://twitter.com/UserPetar" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
         <a href="mailto:petar@georgiev.cloud"><i class="fas fa-envelope"></i></a>
     </div>
     <h1>Welcome to My Blog</h1>
@@ -82,11 +82,11 @@
         <h2>Language</h2>
         <p>Posted on 30th August 2024</p>
         <p>I had the incredible fortune of growing up in a truly magical place, surrounded by some wonderful people. To this day, I feel incredibly lucky to have been part of such a vibrant community, one that imparted invaluable skills and life lessons. However, there was one crucial lesson that slipped through the cracks—mastering the art of communication. As a child, I didn’t quite grasp the significance of strong communication skills. I guess I wasn’t exposed to enough examples of clear, impactful speech or I just failed to recognise and understand that. The idea of articulating myself concisely and confidently didn’t really dawn on me until much later in life.
-
+<br>
 As my career progressed, it became crystal clear that communication is just as crucial in software development as coding itself. While mastering programming languages was always a top priority, I soon realised that mastering human language was just as important. Whether I’m deciphering client requirements for a new feature or hashing out complex problems with my colleagues, strong communication skills have been essential. It’s not just about getting to the root of the issue; it’s also about making sure everyone involved is on the same page. Only then can you craft a truly effective solution.
-
+<br>
 In today’s fast-paced tech world, a fascinating new trend is taking shape: English is becoming as essential as traditional coding languages. With the rise of AI coding platforms, programmers are now expected not only to write code but also to communicate effectively with artificial intelligence. This marks a major shift, particularly for those of us who’ve typically focused more on code than on conversation. It’s a whole new ballgame, where mastering the art of communication is just as vital as mastering syntax and algorithms.
-
+<br>
 The tech landscape may be shifting rapidly, but the core principles of software development are as vital as ever. A solid grasp of algorithms, infrastructure, and the like remains fundamental. What hasn’t changed, though, is the crucial need for effective communication—whether you’re conversing with a human or interfacing with software. The way we interact with our code and systems is evolving, increasingly relying on natural language. In this ever-changing world, how you communicate is just as important as what you’re building.</p>
     </div>
 </div>
