--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Blog</title>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,15 +14,14 @@
             color: #333;
         }
         header {
-            background-color: #D3D3D3;
-            color: white;
+            background-color: #C0C0C0;
             padding: 10px 0;
             text-align: center;
         }
         header img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
+            width: 200px;
+            height: 200px;
+            border-radius: 90%;
             display: block;
             margin: 0 auto 10px;
         }
@@ -57,8 +56,7 @@
             margin-top: 0;
         }
         footer {
-            background-color: #D3D3D3;
-            color: white;
+            background-color: #C0C0C0;
             text-align: center;
             padding: 10px 0;
             margin-top: 20px;
@@ -70,9 +68,9 @@
 <header>
     <img src="5950-1490.png" alt="My Photo">
     <div class="social-icons">
-        <a href="https://www.linkedin.com/in/petar-georgiev-752a55284/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://twitter.com/UserPetar" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-        <a href="mailto:petar@georgiev.cloud"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/petar-georgiev-752a55284/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://twitter.com/UserPetar" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="mailto:petar@georgiev.cloud"><i class="fa-solid fa-envelope"></i></a>
     </div>
     <h1>Welcome to My Blog</h1>
 </header>
