--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="https://twitter.com/UserPetar" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="mailto:petar@georgiev.cloud"><i class="fa-solid fa-envelope"></i></a>
     </div>
-    <h1>Welcome to My Blog</h1>
+    <h1>Petar Georgiev</h1>
 </header>
 
 <div class="container">
@@ -89,8 +89,8 @@ As my career progressed, it became crystal clear that communication is just as c
 <br><br>
 In today’s fast-paced tech world, a fascinating new trend is taking shape: English is becoming as essential as traditional coding languages. With the rise of AI coding platforms, programmers are now expected not only to write code but also to communicate effectively with artificial intelligence. This marks a major shift, particularly for those of us who’ve typically focused more on code than on conversation. It’s a whole new ballgame, where mastering the art of communication is just as vital as mastering syntax and algorithms.
 <br><br>
-The tech landscape may be shifting rapidly, but the core principles of software development are as vital as ever. A solid grasp of algorithms, infrastructure, and the like remains fundamental. What hasn’t changed, though, is the crucial need for effective communication—whether you’re conversing with a human or interfacing with software. The way we interact with our code and systems is evolving, increasingly relying on natural language. In this ever-changing world, how you communicate is just as important as what you’re building.</p>
-    </div>
+The tech landscape may be shifting rapidly, but the core principles of software development are as vital as ever. A solid grasp of algorithms, infrastructure, and the like remains fundamental. However, the way we interact with our code and systems is evolving, increasingly relying on natural language. What hasn’t changed, though, is the crucial need for effective communication—whether you’re conversing with a human or interfacing with software. In this ever-changing world, how you communicate is just as important as what you’re building.
+ </div>
 </div>
 
 <footer>
