--- a/index.html
+++ b/index.html
@@ -375,19 +375,19 @@
       </div>
 
       <div class="profile">
-        <img src="./profile.jpg" alt="Profile photo" class="avatar" />
+        <img src="./5950-1490-1.png" alt="Profile photo" class="avatar" />
 
         <div class="profile-text">
-          <div class="name">GEORGI GEORGIEV</div>
+          <div class="name">Petar GEORGIEV</div>
           <div class="tagline">Software • Systems • Thoughts</div>
 
           <!-- Replace these with your real social links -->
           <div class="socials">
             <a href="https://georgiev.cloud/" target="_blank" rel="noopener noreferrer">WEBSITE</a>
-            <a href="https://github.com/USERNAME" target="_blank" rel="noopener noreferrer">GITHUB</a>
-            <a href="https://linkedin.com/in/USERNAME" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
-            <a href="https://twitter.com/USERNAME" target="_blank" rel="noopener noreferrer">X</a>
-            <a href="mailto:you@email.com">EMAIL</a>
+            <a href="https://github.com/ttetbp" target="_blank" rel="noopener noreferrer">GITHUB</a>
+            <a href="https://www.linkedin.com/in/petar-georgiev-752a55284/" target="_blank" rel="noopener noreferrer">LINKEDIN</a>
+            <a href="https://twitter.com/UserPetar" target="_blank" rel="noopener noreferrer">X</a>
+            <a href="mailto:petar@georgiev.cloud">EMAIL</a>
           </div>
         </div>
       </div>
